# reaper

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
benches/: bench_analyze.rs
benchmark/: audit_prod.py  final_benchmark.sh  gen_corpus.py
src/: analyze.rs  ast.rs  banner.rs  discovery.rs  lib.rs  location.rs  main.rs  names.rs  parser.rs  types.rs
src/checks/: dead_branch.rs  mod.rs  unreachable.rs  unused_args.rs  unused_defs.rs  unused_imports.rs  unused_loop_var.rs  unused_variables.rs
src/fast_parser/: lexer.rs  mod.rs  parser.rs
tests/: integration.rs
