[package]
name = "reaper"
version = "0.1.0"
edition = "2024"
authors = ["Taradepan R"]
description = "A fast, cross-file Python dead-code finder written in Rust"
license = "MIT"
repository = "https://github.com/taradepan/reaper"
homepage = "https://github.com/taradepan/reaper"
readme = "README.md"
keywords = ["python", "dead-code", "linter", "static-analysis", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "reaper"
path = "src/main.rs"

[lib]
name = "reaper"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4.25"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.25.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_analyze"
harness = false
